--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -58,40 +58,40 @@ body {
 
 @layer components {
   .markdown p {
-    @apply mt-3 first:mt-0;
+    @apply mt-4 first:mt-0 text-neutral-700 dark:text-neutral-300;
   }
   .markdown ol {
-    @apply flex flex-col gap-5 pl-4 my-3 list-decimal;
+    @apply flex flex-col gap-6 pl-5 my-4 list-decimal;
   }
   .markdown ul {
-    @apply flex flex-col gap-5 pl-4 my-3 list-disc;
+    @apply flex flex-col gap-6 pl-5 my-4 list-disc;
   }
   .markdown h2 {
-    @apply mt-4 mb-2 text-2xl font-semibold;
+    @apply mt-6 mb-3 text-3xl font-semibold text-neutral-800 dark:text-neutral-200;
   }
   .markdown h3 {
-    @apply mt-4 mb-2 text-xl font-semibold;
+    @apply mt-5 mb-2 text-2xl font-semibold text-neutral-800 dark:text-neutral-200;
   }
   .markdown h4 {
-    @apply mt-4 mb-2 text-lg font-medium;
+    @apply mt-5 mb-2 text-xl font-medium text-neutral-800 dark:text-neutral-200;
   }
   .markdown h5 {
-    @apply mt-4 mb-2 text-base font-medium;
+    @apply mt-4 mb-2 text-lg font-medium text-neutral-800 dark:text-neutral-200;
   }
   .markdown table {
-    @apply w-full my-6 overflow-hidden text-left rounded-md table-auto;
+    @apply w-full my-6 overflow-hidden text-left rounded-md table-auto bg-white dark:bg-neutral-800;
   }
   .markdown table thead {
     @apply text-sm font-medium uppercase border-b border-neutral-200 dark:border-neutral-400 bg-neutral-50 dark:bg-neutral-700;
   }
   .markdown table thead th {
-    @apply px-4 py-3;
+    @apply px-5 py-4;
   }
   .markdown table tbody tr {
     @apply text-sm border-b dark:border-neutral-600 border-neutral-300 last:border-none even:bg-neutral-100 odd:bg-neutral-200 even:dark:bg-neutral-700 odd:dark:bg-neutral-800;
   }
 
   .markdown table tbody tr td {
-    @apply px-4 py-3;
+    @apply px-5 py-4;
   }
 }
